[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/UI/icons/apple.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Squares.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/icons/enemy.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/icons/hourglass.png" type="Texture" id=4]
[ext_resource path="res://scripts/hud/hud.gd" type="Script" id=5]
[ext_resource path="res://themes/label_tip.tres" type="Theme" id=6]
[ext_resource path="res://themes/entry.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 2 )

[node name="hud" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="esc_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="fruit_icon" type="TextureRect" parent="."]
margin_left = -15.0
margin_top = -10.0
margin_right = 17.0
margin_bottom = 22.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fruit_label" type="Label" parent="."]
margin_left = 36.0
margin_top = 13.0
margin_right = 92.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0 / 10"

[node name="enemies_icon" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 37.0
margin_right = 46.0
margin_bottom = 69.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="enemies_label" type="Label" parent="."]
margin_left = 36.0
margin_top = 43.0
margin_right = 92.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0 / 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_icon" type="TextureRect" parent="."]
margin_left = -4.0
margin_top = 63.0
margin_right = 586.0
margin_bottom = 633.0
rect_scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="."]
margin_left = 36.0
margin_top = 75.0
margin_right = 92.0
margin_bottom = 93.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0 / 10"

[node name="esc_label" type="Label" parent="."]
visible = false
margin_left = 120.0
margin_top = 44.0
margin_right = 490.0
margin_bottom = 59.0
theme = ExtResource( 6 )
text = "Press   ESC   again   to   return   to  main   menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goto_level" type="LineEdit" parent="."]
visible = false
margin_left = 952.0
margin_top = 568.0
margin_right = 1018.0
margin_bottom = 596.0
theme = ExtResource( 7 )
max_length = 2
placeholder_text = "Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fly_label" type="Label" parent="."]
visible = false
margin_left = 896.0
margin_top = 32.0
margin_right = 975.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Fly:   ON"

[node name="immortal_label" type="Label" parent="."]
visible = false
margin_left = 864.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Immortal:   ON"

[connection signal="timeout" from="esc_timer" to="." method="_on_esc_timer_timeout"]
[connection signal="text_entered" from="goto_level" to="." method="_on_goto_level_text_entered"]
